# V99-storage

./: package.json  react-native-mmkv.podspec  tsconfig.json  v99-storage.podspec
MMKV/iOS/MMKV/MMKV/: MMKViOS.h  libMMKV.mm
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/reactnativemmkv/: MmkvModule.java  MmkvPackage.java
docs/: WRAPPER_MOBX.md  WRAPPER_MOBXPERSIST.md  WRAPPER_REACT_QUERY.md  WRAPPER_REDUX.md  WRAPPER_ZUSTAND_PERSIST_MIDDLEWARE.md
ios/: MmkvHostObject.h  MmkvModule.mm
src/: createMMKV.mock.ts  createMMKV.ts  createMMKV.web.ts
